# minres_improved

./: .gitattributes  .gitignore  .gitignore.save  README.md
cpp_minres/: CMakeLists.txt  ONNXModelPredictor.cpp  ONNXModelPredictor.hpp  main.cpp
cpp_minres/helpers/: helper_functions.cpp  helper_functions.hpp  minressparse.hpp
cpp_minres/lstsquares_example/: LstsquaresOperator.hpp  LstsquaresVector.cpp  LstsquaresVector.hpp  SOperator.hpp
cpp_minres/saved_model/: fingerprint.pb  model.onnx  saved_model.pb
cpp_minres/saved_model/variables/: variables.data-00000-of-00001  variables.index
lib/: bicgstab.py  conjugate_residual.py  gcr.py  gmres.py  helper_functions.py  minres.py
src/: basic_tests.py  plot_loss.py  saved_models.py  sparse_matrixA.py  test_all.py  testminresalgorithm.py
src/dataset/: create_lsquares_dataset.py  create_lstquares_dataset_fourier.py  create_originalA  create_tridiagA_andS.py  datasetcreate.py  generate_ilumatrix.py  generate_lstsquares_test.py  generate_testdata.py  lstsquare_testset.py
src/train/: train.py
